Deployable at Tomcat.

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -22,6 +22,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
+            "baseHref": "/springboot-angular-app/",
             "aot": true,
             "assets": [
               "src/favicon.ico",
