--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json -o",
     "build": "ng build",
-    "build-p": "ng build --prod",
+    "build-p": "ng build --prod --base-href /springboot-angular-app/",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
