Added some component and other stuff

--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,14 @@
-/frontend/target/
-/backend/target/
 target/
-!.mvn/wrapper/maven-wrapper.jar
 *.class
-
-logs/*
-!.gitkeep
-node_modules/
-node/
-bower_components/
-tmp
-.DS_Store
-src/main/npm-debug.log
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
+node_modules
 .project
 .settings
-.springBeans
-
-.tern-project
-
-
-### IntelliJ IDEA ###
+.classpath
 .idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-.nb-gradle/
+node/
+node_modules/
+lib/
+FilmGezien.iml
+backend/backend.iml
+daily-email-content.html
+start-me.sh
