--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,46 +1,49 @@
 {
   "name": "SpringbootAngularApp",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json -o",
     "build": "ng build",
     "build-p": "ng build --prod --base-href /springboot-angular-app/",
-    "test": "ng test",
+    "test": "ng test --browsers ChromeHeadless --watch=false --karma-config=karma.conf.js",
+    "testcoverage": "ng test --browsers ChromeHeadless --watch=false --code-coverage --karma-config=karma.conf.js",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.2.12",
-    "@angular/common": "~11.2.12",
-    "@angular/compiler": "~11.2.12",
-    "@angular/core": "~11.2.12",
-    "@angular/forms": "~11.2.12",
-    "@angular/platform-browser": "~11.2.12",
-    "@angular/platform-browser-dynamic": "~11.2.12",
-    "@angular/router": "~11.2.12",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
+    "@angular/animations": "~12.2.14",
+    "@angular/common": "~12.2.14",
+    "@angular/compiler": "~12.2.14",
+    "@angular/core": "~12.2.14",
+    "@angular/forms": "~12.2.14",
+    "@angular/platform-browser": "~12.2.14",
+    "@angular/platform-browser-dynamic": "~12.2.14",
+    "@angular/router": "~12.2.14",
+    "@ngrx/component": "^12.5.1",
+    "@ngrx/store": "12.5.1",
+    "rxjs": "~6.6.3",
+    "tslib": "^2.1.0",
     "zone.js": "~0.11.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1102.11",
-    "@angular/cli": "~11.2.11",
-    "@angular/compiler-cli": "~11.2.12",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.1.0",
+    "@angular-devkit/build-angular": "~12.2.14",
+    "@angular/cli": "~12.2.14",
+    "@angular/compiler-cli": "~12.2.14",
+    "@types/jasmine": "~3.10.2",
+    "@types/node": "^16.11.11",
+    "codelyzer": "^6.0.2",
+    "jasmine-core": "~3.10.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.3.9",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
+    "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
+    "ts-node": "~10.4.0",
+    "tslint": "~6.1.3",
+    "typescript": "~4.3.5"
   }
 }
