--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>springboot-angular-app</artifactId>
         <groupId>nl.icampagne.study</groupId>
-        <version>0.1.1</version>
+        <version>0.2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -17,16 +17,47 @@
             <plugin>
                 <groupId>com.github.eirslett</groupId>
                 <artifactId>frontend-maven-plugin</artifactId>
-                <version>1.11.3</version>
+                <version>1.12.0</version>
+                <configuration>
+                    <nodeVersion>v18.17.1</nodeVersion>
+                    <npmVersion>9.6.7</npmVersion>
+                    <workingDirectory>.</workingDirectory>
+                </configuration>
+
                 <executions>
                     <execution>
-                        <id>npm run build-p</id>
+                        <id>install node and npm</id>
+                        <goals>
+                            <goal>install-node-and-npm</goal>
+                        </goals>
+                    </execution>
+
+                    <execution>
+                        <id>npm install</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                    </execution>
+
+                    <execution>
+                        <id>npm run build</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+
+                        <configuration>
+                            <arguments>run build</arguments>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>prod</id>
                         <goals>
                             <goal>npm</goal>
                         </goals>
                         <configuration>
-                            <arguments>run build-p</arguments>
+                            <arguments>run-script build</arguments>
                         </configuration>
+                        <phase>generate-resources</phase>
                     </execution>
                 </executions>
             </plugin>
