--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>springboot-angular-app</artifactId>
         <groupId>nl.icampagne.study</groupId>
-        <version>0.2.7</version>
+        <version>0.2.8</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -62,7 +62,7 @@
         <dependency>
             <groupId>nl.icampagne.study.springboot-angular-app</groupId>
             <artifactId>frontend</artifactId>
-            <version>${project.version}</version>
+            <version>${project.parent.version}</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
