--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@angular/core": "^16.2.11",
     "@angular/forms": "^16.2.11",
     "@angular/material": "^16.2.12",
+    "@angular/material-luxon-adapter": "~16.2.12",
     "@angular/platform-browser": "^16.2.11",
     "@angular/platform-browser-dynamic": "^16.2.11",
     "@angular/router": "^16.2.11",
@@ -31,11 +32,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.9",
+    "@angular-eslint/builder": "16.3.1",
+    "@angular-eslint/eslint-plugin": "16.3.1",
+    "@angular-eslint/eslint-plugin-template": "16.3.1",
+    "@angular-eslint/schematics": "16.3.1",
+    "@angular-eslint/template-parser": "16.3.1",
     "@angular/cli": "^16.2.9",
     "@angular/compiler-cli": "^16.2.11",
     "@types/jasmine": "~3.10.2",
     "@types/node": "^16.11.11",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
     "codelyzer": "^6.0.2",
+    "eslint": "^8.51.0",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.9",
