--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -26,7 +26,12 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+             		"glob": "**/*",
+             		"input": "./node_modules/pspdfkit/dist/pspdfkit-lib/",
+             		"output": "./assets/pspdfkit-lib/"
+             	}
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
