--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^16.2.11",
     "@ngrx/component": "^16.2.0",
     "@ngrx/store": "16.2.0",
+    "pspdfkit": "^2024.1.3",
     "rxjs": "~7.8.1",
     "tslib": "^2.1.0",
     "zone.js": "~0.13.3"
