--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -100,9 +100,9 @@
           }
         },
         "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+          "builder": "@angular-devkit/build-angular:cypress",
           "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
+            "cypressConfig": "cypress.conf.js",
             "devServerTarget": "frontend:serve"
           },
           "configurations": {
