--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -3,6 +3,6 @@ server:
 spring:
   security:
     user:
-      name: 'admin'
-      password: 'admin'
+      name: 'private'
+      password: 'Private*007'
       roles: 'ADMIN'
