--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,15 +20,15 @@
     "@angular/compiler": "^18.2.13",
     "@angular/core": "^18.2.13",
     "@angular/forms": "^18.2.13",
-    "@angular/material": "^17.3.10",
-    "@angular/material-luxon-adapter": "~17.3.10",
+    "@angular/material": "^18.2.14",
+    "@angular/material-luxon-adapter": "~18.2.14",
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
-    "@ngrx/component": "^17.2.0",
-    "@ngrx/store": "17.2.0",
+    "@ngrx/component": "^18.1.1",
+    "@ngrx/store": "18.1.1",
     "rxjs": "~7.8.1",
-    "tslib": "^2.1.0",
+    "tslib": "^2.8.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
@@ -40,12 +40,12 @@
     "@angular-eslint/template-parser": "18.4.3",
     "@angular/cli": "^18.2.14",
     "@angular/compiler-cli": "^18.2.13",
-    "@types/jasmine": "~3.10.2",
-    "@types/node": "^16.11.11",
-    "@typescript-eslint/eslint-plugin": "5.62.0",
-    "@typescript-eslint/parser": "5.62.0",
+    "@types/jasmine": "~3.10.18",
+    "@types/node": "^16.18.126",
+    "@typescript-eslint/eslint-plugin": "^8.24.0",
+    "@typescript-eslint/parser": "8.24.0",
     "codelyzer": "^6.0.2",
-    "cypress": "^13.7.2",
+    "cypress": "^13.17.0",
     "eslint": "^8.51.0",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
