--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "springboot-angular-app",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json --port 4212 -o",
@@ -20,14 +20,15 @@
     "@angular/compiler": "^19.1.6",
     "@angular/core": "^19.1.6",
     "@angular/forms": "^19.1.6",
-    "@angular/material": "^18.2.14",
-    "@angular/material-luxon-adapter": "~18.2.14",
+    "@angular/material": "^19.1.4",
+    "@angular/material-luxon-adapter": "~19.1.4",
     "@angular/platform-browser": "^19.1.6",
     "@angular/platform-browser-dynamic": "^19.1.6",
     "@angular/router": "^19.1.6",
     "@ngrx/component": "^19.0.1",
     "@ngrx/store": "19.0.1",
     "rxjs": "~7.8.1",
+    "sass-migrator": "^2.3.1",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
@@ -41,12 +42,12 @@
     "@angular/cli": "^19.1.7",
     "@angular/compiler-cli": "^19.1.6",
     "@types/jasmine": "~3.10.18",
-    "@types/node": "^16.18.126",
+    "@types/node": "^18.19.76",
     "@typescript-eslint/eslint-plugin": "^8.24.0",
     "@typescript-eslint/parser": "8.24.0",
     "codelyzer": "^6.0.2",
     "cypress": "^13.17.0",
-    "eslint": "^8.51.0",
+    "eslint": "^9.20.1",
     "jasmine-core": "~3.10.1",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.3.9",
@@ -54,8 +55,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ts-node": "~10.4.0",
+    "ts-node": "~10.9.2",
     "tslint": "~6.1.3",
-    "typescript": "~5.5.4"
+    "typescript": "~5.7.3"
   }
 }
