--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -20,7 +20,9 @@
             "outputPath": "dist/frontend",
             "index": "src/index.html",
             "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js"
+            ],
             "tsConfig": "tsconfig.app.json",
             "baseHref": "/springboot-angular-app/",
             "aot": true,
