--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
   "name": "springboot-angular-app",
-  "version": "0.4.7",
+  "version": "0.4.8",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config proxy.conf.json --port 4212 -o",
@@ -14,49 +14,47 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.1.6",
-    "@angular/cdk": "^19.1.4",
-    "@angular/common": "^19.1.6",
-    "@angular/compiler": "^19.1.6",
-    "@angular/core": "^19.1.6",
-    "@angular/forms": "^19.1.6",
-    "@angular/material": "^19.1.4",
-    "@angular/material-luxon-adapter": "~19.1.4",
-    "@angular/platform-browser": "^19.1.6",
-    "@angular/platform-browser-dynamic": "^19.1.6",
-    "@angular/router": "^19.1.6",
-    "@ngrx/component": "^19.0.1",
-    "@ngrx/store": "19.0.1",
-    "rxjs": "~7.8.1",
-    "sass-migrator": "^2.3.1",
+    "@angular/animations": "^20.1.2",
+    "@angular/cdk": "^20.1.2",
+    "@angular/common": "^20.1.2",
+    "@angular/compiler": "^20.1.2",
+    "@angular/core": "^20.1.2",
+    "@angular/forms": "^20.1.2",
+    "@angular/material": "^20.1.2",
+    "@angular/material-luxon-adapter": "~20.1.2",
+    "@angular/platform-browser": "^20.1.2",
+    "@angular/platform-browser-dynamic": "^20.1.2",
+    "@angular/router": "^20.1.2",
+    "@ngrx/component": "^20.0.0-rc.0",
+    "@ngrx/store": "^20.0.0-rc.0",
+    "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.7",
-    "@angular-eslint/builder": "19.1.0",
-    "@angular-eslint/eslint-plugin": "19.1.0",
-    "@angular-eslint/eslint-plugin-template": "19.1.0",
-    "@angular-eslint/schematics": "19.1.0",
-    "@angular-eslint/template-parser": "19.1.0",
-    "@angular/cli": "^19.1.7",
-    "@angular/compiler-cli": "^19.1.6",
-    "@types/jasmine": "~3.10.18",
-    "@types/node": "^18.19.76",
+    "@angular-devkit/build-angular": "^20.1.1",
+    "@angular-eslint/builder": "^20.1.1",
+    "@angular-eslint/eslint-plugin": "^20.1.1",
+    "@angular-eslint/eslint-plugin-template": "^20.1.1",
+    "@angular-eslint/schematics": "^20.1.1",
+    "@angular-eslint/template-parser": "^20.1.1",
+    "@angular/cli": "^20.1.1",
+    "@angular/compiler-cli": "^20.1.2",
+    "@types/jasmine": "~5.1.8",
+    "@types/node": "^24.0.15",
     "@typescript-eslint/eslint-plugin": "^8.37.0",
     "@typescript-eslint/parser": "8.37.0",
     "codelyzer": "^6.0.2",
-    "cypress": "^13.17.0",
-    "eslint": "^9.20.1",
-    "jasmine-core": "~3.10.1",
+    "cypress": "^14.5.2",
+    "eslint": "^9.31.0",
+    "jasmine-core": "~5.9.0",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.9",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage": "~2.2.1",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "ts-node": "~10.9.2",
-    "tslint": "~6.1.3",
-    "typescript": "~5.7.3"
+    "typescript": "~5.8.3"
   }
 }
