--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -36,6 +36,9 @@
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/assets"]
+            },
             "scripts": [],
             "browser": "src/main.ts"
           },
